# picalc

./: .gitignore  README.md  meson.build  meson_options.txt
doc/: main.tex
src/: main.cpp
