option('cli11_include_dir', type : 'string', value : '/usr/local/include/CLI11.hpp', description : 'the dir containing CLI11.hpp')
option('spdlog_include_dir', type : 'string', value : '/usr/local/include/', description : 'the include dir of spdlog')
option('tfile_include_dir', type : 'string', value : '/usr/local/include/tfile.h', description : 'the dir containing tfile.h')
